applications/production/base-api/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: app 
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-secret
