applications/production/base-api/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: app 
spec:
  rules:
    - host: api.kzt.biz.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
